--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,21 +1,20 @@
 /* Core CSS required for Ionic components to work properly */
-@import "~@ionic/angular/css/core.css";
+@import '~@ionic/angular/css/core.css';
 
 /* Basic CSS for apps built with Ionic */
-@import "~@ionic/angular/css/normalize.css";
-@import "~@ionic/angular/css/structure.css";
-@import "~@ionic/angular/css/typography.css";
+@import '~@ionic/angular/css/normalize.css';
+@import '~@ionic/angular/css/structure.css';
+@import '~@ionic/angular/css/typography.css';
 @import '~@ionic/angular/css/display.css';
 
 /* Optional CSS utils that can be commented out */
-@import "~@ionic/angular/css/padding.css";
-@import "~@ionic/angular/css/float-elements.css";
-@import "~@ionic/angular/css/text-alignment.css";
-@import "~@ionic/angular/css/text-transformation.css";
-@import "~@ionic/angular/css/flex-utils.css";
+@import '~@ionic/angular/css/padding.css';
+@import '~@ionic/angular/css/float-elements.css';
+@import '~@ionic/angular/css/text-alignment.css';
+@import '~@ionic/angular/css/text-transformation.css';
+@import '~@ionic/angular/css/flex-utils.css';
 
-
- /*
+/*
   * Animations
   */
 @keyframes loadingPlaceHolder {
@@ -42,7 +41,7 @@
 
 @keyframes fadein {
   from {
-    opacity: 0;
+    opacity: 0.1;
   }
   to {
     opacity: 1;
@@ -50,16 +49,20 @@
 }
 
 .fade-in {
-  animation: fadein 3s;
+  animation: fadein 2s;
 }
-
 
 /*
  * Global components
  */
- ion-badge {
+ion-badge {
   --padding-top: 6px;
   --padding-end: 6px;
   --padding-bottom: 6px;
   --padding-start: 6px;
- }
+}
+
+ion-header ion-toolbar .sc-ion-searchbar-ios-h {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
